@@ -11,58 +11,60 @@
 
 static const char output0[] =
     "Multiboot 2 header {\n"
-    "  u32 magic: 3897708758\n"
+    "  u32 magic: 0xe85250d6\n"
     "  u32 arch: 0 (i386)\n"
     "  u32 size: 24\n"
-    "  u32 checksum: 397258514\n"
+    "  u32 checksum: 0x17adaf12\n"
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 0 (none)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x0 ()\n"
     "  u32 size: 8\n"
     "}\n";
 
 static const char output1[] =
     "Multiboot 2 header {\n"
-    "  u32 magic: 3897708758\n"
+    "  u32 magic: 0xe85250d6\n"
     "  u32 arch: 4 (MIPS32)\n"
     "  u32 size: 104\n"
-    "  u32 checksum: 397258430\n"
+    "  u32 checksum: 0x17adaebe\n"
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 4 (flags)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x0 ()\n"
     "  u32 size: 12\n"
-    "  u32 console_flags: 0 ()\n"
+    "  u32 console_flags: 0x0 ()\n"
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 4 (flags)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x0 ()\n"
     "  u32 size: 12\n"
-    "  u32 console_flags: 1 (\n"
+    "  u32 console_flags: 0x1 (\n"
     "    REQUIRE_CONSOLE\n"
     "  )\n"
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 4 (flags)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x0 ()\n"
     "  u32 size: 12\n"
-    "  u32 console_flags: 2 (\n"
+    "  u32 console_flags: 0x2 (\n"
     "    EGA_SUPPORT\n"
     "  )\n"
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 4 (flags)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x0 ()\n"
     "  u32 size: 12\n"
-    "  u32 console_flags: 3 (\n"
+    "  u32 console_flags: 0x3 (\n"
     "    REQUIRE_CONSOLE |\n"
     "    EGA_SUPPORT\n"
     "  )\n"
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 1 (information request)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x1 (\n"
+    "    OPTIONAL\n"
+    "  )\n"
     "  u32 size: 12\n"
     "  u32 mbi_tag_types[]: [\n"
     "    0 (none)\n"
@@ -70,20 +72,20 @@ static const char output1[] =
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 0 (none)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x0 ()\n"
     "  u32 size: 8\n"
     "}\n";
 
 static const char output2[] =
     "Multiboot 2 header {\n"
-    "  u32 magic: 3897708758\n"
+    "  u32 magic: 0xe85250d6\n"
     "  u32 arch: 0 (i386)\n"
     "  u32 size: 272\n"
-    "  u32 checksum: 397258266\n"
+    "  u32 checksum: 0x17adae1a\n"
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 1 (information request)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x0 ()\n"
     "  u32 size: 96\n"
     "  u32 mbi_tag_types[]: [\n"
     "    0 (none)\n"
@@ -112,28 +114,28 @@ static const char output2[] =
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 2 (address)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x0 ()\n"
     "  u32 size: 24\n"
-    "  u32 header_addr: 3405691582\n"
-    "  u32 load_addr: 3735928495\n"
-    "  u32 load_end_addr: 3735927486\n"
-    "  u32 bss_end_addr: 3405692591\n"
+    "  u32 header_addr: 0xcafebabe\n"
+    "  u32 load_addr: 0xdeadbeaf\n"
+    "  u32 load_end_addr: 0xdeadbabe\n"
+    "  u32 bss_end_addr: 0xcafebeaf\n"
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 3 (entry address)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x0 ()\n"
     "  u32 size: 12\n"
-    "  u32 entry_addr: 3405691582\n"
+    "  u32 entry_addr: 0xcafebabe\n"
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 4 (flags)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x0 ()\n"
     "  u32 size: 12\n"
-    "  u32 console_flags: 0 ()\n"
+    "  u32 console_flags: 0x0 ()\n"
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 5 (framebuffer)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x0 ()\n"
     "  u32 size: 20\n"
     "  u32 width: 80\n"
     "  u32 height: 25\n"
@@ -141,37 +143,37 @@ static const char output2[] =
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 6 (module alignment)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x0 ()\n"
     "  u32 size: 8\n"
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 7 (EFI boot services)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x0 ()\n"
     "  u32 size: 8\n"
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 8 (EFI i386 entry address)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x0 ()\n"
     "  u32 size: 12\n"
-    "  u32 entry_addr: 3405691582\n"
+    "  u32 entry_addr: 0xcafebabe\n"
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 9 (EFI amd64 entry address)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x0 ()\n"
     "  u32 size: 12\n"
-    "  u32 entry_addr: 3735928495\n"
+    "  u32 entry_addr: 0xdeadbeaf\n"
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 10 (relocatable header)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x0 ()\n"
     "  u32 size: 24\n"
-    "  u32 min_addr: 3405691582\n"
-    "  u32 max_addr: 3735928495\n"
+    "  u32 min_addr: 0xcafebabe\n"
+    "  u32 max_addr: 0xdeadbeaf\n"
     "  u32 align: 8\n"
     "}\n"
     "Multiboot 2 header tag {\n"
     "  u16 type: 0 (none)\n"
-    "  u16 flags: 0\n"
+    "  u16 flags: 0x0 ()\n"
     "  u32 size: 8\n"
     "}\n";
 
