@@ -14,7 +14,7 @@
 static const char output0[] =
     "Multiboot 2 info {\n"
     "  u32 size: 16\n"
-    "  u32 reserved: 0\n"
+    "  u32 reserved: 0x0\n"
     "}\n"
     "Multiboot 2 info tag {\n"
     "  u32 type: 0 (none)\n"
@@ -24,12 +24,12 @@ static const char output0[] =
 static const char output1[] =
     "Multiboot 2 info {\n"
     "  u32 size: 864\n"
-    "  u32 reserved: 0\n"
+    "  u32 reserved: 0x0\n"
     "}\n"
     "Multiboot 2 info tag {\n"
     "  u32 type: 21 (image load base phys addr)\n"
     "  u32 size: 12\n"
-    "  u32 load_base_addr: 4194304\n"
+    "  u32 load_base_addr: 0x400000\n"
     "}\n"
     "Multiboot 2 info tag {\n"
     "  u32 type: 1 (boot cmd line)\n"
@@ -57,15 +57,15 @@ static const char output1[] =
     "Multiboot 2 info tag {\n"
     "  u32 type: 3 (module)\n"
     "  u32 size: 29\n"
-    "  u32 mod_start: 1056768\n"
-    "  u32 mod_end: 1061532\n"
+    "  u32 mod_start: 0x102000\n"
+    "  u32 mod_end: 0x10329c\n"
     "  char cmdline[]: \"hello module\"\n"
     "}\n"
     "Multiboot 2 info tag {\n"
     "  u32 type: 3 (module)\n"
     "  u32 size: 17\n"
-    "  u32 mod_start: 1064960\n"
-    "  u32 mod_end: 1069652\n"
+    "  u32 mod_start: 0x104000\n"
+    "  u32 mod_end: 0x105254\n"
     "  char cmdline[]: \"\"\n"
     "}\n"
     "Multiboot 2 info tag {\n"
@@ -75,40 +75,40 @@ static const char output1[] =
     "  u32 entry_version: 0\n"
     "  varies(entry_size) entries[]: [\n"
     "    [0] entry: {\n"
-    "      u64 base_addr: 0\n"
+    "      u64 base_addr: 0x0\n"
     "      u64 length: 654336\n"
     "      u32 type: 1\n"
-    "      u32 reserved: 0\n"
+    "      u32 reserved: 0x0\n"
     "    }\n"
     "    [1] entry: {\n"
-    "      u64 base_addr: 654336\n"
+    "      u64 base_addr: 0x9fc00\n"
     "      u64 length: 1024\n"
     "      u32 type: 2\n"
-    "      u32 reserved: 0\n"
+    "      u32 reserved: 0x0\n"
     "    }\n"
     "    [2] entry: {\n"
-    "      u64 base_addr: 983040\n"
+    "      u64 base_addr: 0xf0000\n"
     "      u64 length: 65536\n"
     "      u32 type: 2\n"
-    "      u32 reserved: 0\n"
+    "      u32 reserved: 0x0\n"
     "    }\n"
     "    [3] entry: {\n"
-    "      u64 base_addr: 1048576\n"
+    "      u64 base_addr: 0x100000\n"
     "      u64 length: 133038080\n"
     "      u32 type: 1\n"
-    "      u32 reserved: 0\n"
+    "      u32 reserved: 0x0\n"
     "    }\n"
     "    [4] entry: {\n"
-    "      u64 base_addr: 134086656\n"
+    "      u64 base_addr: 0x7fe0000\n"
     "      u64 length: 131072\n"
     "      u32 type: 2\n"
-    "      u32 reserved: 0\n"
+    "      u32 reserved: 0x0\n"
     "    }\n"
     "    [5] entry: {\n"
-    "      u64 base_addr: 4294705152\n"
+    "      u64 base_addr: 0xfffc0000\n"
     "      u64 length: 262144\n"
     "      u32 type: 2\n"
-    "      u32 reserved: 0\n"
+    "      u32 reserved: 0x0\n"
     "    }\n"
     "  ]\n"
     "}\n"
@@ -135,13 +135,13 @@ static const char output1[] =
     "Multiboot 2 info tag {\n"
     "  u32 type: 8 (framebuffer info)\n"
     "  u32 size: 32\n"
-    "  u64 framebuffer_addr: 753664\n"
+    "  u64 framebuffer_addr: 0xb8000\n"
     "  u32 framebuffer_pitch: 160\n"
     "  u32 framebuffer_width: 80\n"
     "  u32 framebuffer_height: 25\n"
     "  u8 framebuffer_bpp: 16\n"
     "  u8 framebuffer_type: 2\n"
-    "  u16 reserved: 0\n"
+    "  u16 reserved: 0x0\n"
     "}\n"
     "Multiboot 2 info tag {\n"
     "  u32 type: 14 (ACPI old RSDP)\n"
@@ -155,7 +155,7 @@ static const char output1[] =
 static const char output2_part1[] =
     "Multiboot 2 info {\n"
     "  u32 size: 1816\n"
-    "  u32 reserved: 0\n"
+    "  u32 reserved: 0x0\n"
     "}\n"
     "Multiboot 2 info tag {\n"
     "  u32 type: 1 (boot cmd line)\n"
@@ -170,15 +170,15 @@ static const char output2_part1[] =
     "Multiboot 2 info tag {\n"
     "  u32 type: 3 (module)\n"
     "  u32 size: 33\n"
-    "  u32 mod_start: 123\n"
-    "  u32 mod_end: 456\n"
+    "  u32 mod_start: 0x7b\n"
+    "  u32 mod_end: 0x1c8\n"
     "  char cmdline[]: \"Hello, Module 1!\"\n"
     "}\n"
     "Multiboot 2 info tag {\n"
     "  u32 type: 3 (module)\n"
     "  u32 size: 33\n"
-    "  u32 mod_start: 123\n"
-    "  u32 mod_end: 456\n"
+    "  u32 mod_start: 0x7b\n"
+    "  u32 mod_end: 0x1c8\n"
     "  char cmdline[]: \"Hello, Module 2!\"\n"
     "}\n"
     "Multiboot 2 info tag {\n"
@@ -201,40 +201,40 @@ static const char output2_part1[] =
     "  u32 entry_version: 0\n"
     "  varies(entry_size) entries[]: [\n"
     "    [0] entry: {\n"
-    "      u64 base_addr: 0\n"
+    "      u64 base_addr: 0x0\n"
     "      u64 length: 654336\n"
     "      u32 type: 1\n"
-    "      u32 reserved: 0\n"
+    "      u32 reserved: 0x0\n"
     "    }\n"
     "    [1] entry: {\n"
-    "      u64 base_addr: 654336\n"
+    "      u64 base_addr: 0x9fc00\n"
     "      u64 length: 1024\n"
     "      u32 type: 2\n"
-    "      u32 reserved: 0\n"
+    "      u32 reserved: 0x0\n"
     "    }\n"
     "    [2] entry: {\n"
-    "      u64 base_addr: 983040\n"
+    "      u64 base_addr: 0xf0000\n"
     "      u64 length: 65536\n"
     "      u32 type: 2\n"
-    "      u32 reserved: 0\n"
+    "      u32 reserved: 0x0\n"
     "    }\n"
     "    [3] entry: {\n"
-    "      u64 base_addr: 1048576\n"
+    "      u64 base_addr: 0x100000\n"
     "      u64 length: 133038080\n"
     "      u32 type: 1\n"
-    "      u32 reserved: 0\n"
+    "      u32 reserved: 0x0\n"
     "    }\n"
     "    [4] entry: {\n"
-    "      u64 base_addr: 134086656\n"
+    "      u64 base_addr: 0x7fe0000\n"
     "      u64 length: 131072\n"
     "      u32 type: 2\n"
-    "      u32 reserved: 0\n"
+    "      u32 reserved: 0x0\n"
     "    }\n"
     "    [5] entry: {\n"
-    "      u64 base_addr: 4294705152\n"
+    "      u64 base_addr: 0xfffc0000\n"
     "      u64 length: 262144\n"
     "      u32 type: 2\n"
-    "      u32 reserved: 0\n"
+    "      u32 reserved: 0x0\n"
     "    }\n"
     "  ]\n"
     "}\n";
@@ -305,13 +305,13 @@ static const char output2_part3[] =
     "Multiboot 2 info tag {\n"
     "  u32 type: 8 (framebuffer info)\n"
     "  u32 size: 40\n"
-    "  u64 framebuffer_addr: 123\n"
+    "  u64 framebuffer_addr: 0x7b\n"
     "  u32 framebuffer_pitch: 456\n"
     "  u32 framebuffer_width: 123\n"
     "  u32 framebuffer_height: 456\n"
     "  u8 framebuffer_bpp: 8\n"
     "  u8 framebuffer_type: 1\n"
-    "  u16 reserved: 0\n"
+    "  u16 reserved: 0x0\n"
     "}\n"
     "Multiboot 2 info tag {\n"
     "  u32 type: 9 (ELF symbols)\n"
@@ -348,7 +348,7 @@ static const char output2_part3[] =
     "  u32 size: 24\n"
     "  u8 major: 1\n"
     "  u8 minor: 2\n"
-    "  u8 reserved[6]: [0, 0, 0, 0, 0, 0]\n"
+    "  u8 reserved[6]: [0x0, 0x0, 0x0, 0x0, 0x0, 0x0]\n"
     "}\n"
     "Multiboot 2 info tag {\n"
     "  u32 type: 14 (ACPI old RSDP)\n"
@@ -385,7 +385,7 @@ static const char output2_part3[] =
     "Multiboot 2 info tag {\n"
     "  u32 type: 21 (image load base phys addr)\n"
     "  u32 size: 12\n"
-    "  u32 load_base_addr: 123\n"
+    "  u32 load_base_addr: 0x7b\n"
     "}\n"
     "Multiboot 2 info tag {\n"
     "  u32 type: 0 (none)\n"
